<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutUs">

    <LinearLayout
        android:background="@color/cb_background_black"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/about_us_background" >

            <ImageView
                android:padding="24dp"
                android:id="@+id/iv_about_us_back"
                android:src="@drawable/top_app_bar_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/home_app_name"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:alpha="0.87"
                android:textColor="@color/cb_primary_purple"
                style="@style/tv_headline_4"
                android:textStyle="bold"
                android:text="@string/about_us_what_is_expresso_title" />

            <TextView
                android:layout_margin="12dp"
                android:layout_gravity="center"
                android:alpha="0.6"
                android:textAlignment="center"
                android:text="@string/about_us_what_is_expresso"
                style="@style/tv_body_1"
                android:layout_marginTop="12dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_gravity="center"
                android:textColor="@color/cb_primary_purple"
                android:alpha="0.87"
                style="@style/tv_headline_6"
                android:text="@string/about_us_the_objectives_of_the_developers_title" />

            <TextView
                android:alpha="0.6"
                android:layout_margin="12dp"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                style="@style/tv_body_2"
                android:text="@string/about_us_the_objectives_of_the_developers_1" />

            <TextView
                android:layout_margin="12dp"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:alpha="0.6"
                style="@style/tv_body_2"
                android:text="@string/about_us_the_objectives_of_the_developers_2" />

            <TextView
                android:layout_marginTop="42dp"
                android:gravity="center"
                style="@style/tv_headline_6"
                android:text="@string/about_us_the_development_team_title"
                android:alpha="0.87"
                android:textColor="@color/cb_primary_purple"
                android:layout_gravity="center" />

            <HorizontalScrollView
                android:layout_marginTop="24dp"
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:elevation="6dp"
                        android:padding="12dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_corners_background_surface"
                        android:layout_width="200dp"
                        android:layout_height="260dp"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_gravity="center"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/marasigan" />

                        <TextView
                            android:textAlignment="center"
                            android:alpha="0.87"
                            android:layout_marginTop="12dp"
                            android:layout_gravity="center"
                            android:layout_height="60dp"
                            style="@style/tv_headline_6"
                            android:text="@string/about_us_developer_marasigan" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:layout_marginTop="6dp"
                            android:textAllCaps="false"
                            android:text="@string/about_us_developer_marasigan_email"
                            style="@style/tv_overline" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/cb_primary_purple"
                            android:text="@string/about_us_role_mobile_developer"
                            style="@style/tv_body_2" />
                    </LinearLayout>
                    <LinearLayout
                        android:elevation="6dp"
                        android:padding="12dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_corners_background_surface"
                        android:layout_width="200dp"
                        android:layout_height="260dp"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_gravity="center"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/pasamanero" />

                        <TextView
                            android:textAlignment="center"
                            android:alpha="0.87"
                            android:layout_marginTop="12dp"
                            android:layout_gravity="center"
                            android:layout_height="60dp"
                            style="@style/tv_headline_6"
                            android:text="@string/about_us_developer_pasamanero" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:textAllCaps="false"
                            android:layout_marginTop="6dp"
                            android:text="@string/about_us_developer_pasamanero_email"
                            style="@style/tv_overline" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/cb_primary_purple"
                            android:text="@string/about_us_role_web_developer"
                            style="@style/tv_body_2" />
                    </LinearLayout>
                    <LinearLayout
                        android:elevation="6dp"
                        android:padding="12dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_corners_background_surface"
                        android:layout_width="200dp"
                        android:layout_height="260dp"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_gravity="center"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/punzalan"/>

                        <TextView
                            android:textAlignment="center"
                            android:alpha="0.87"
                            android:layout_marginTop="12dp"
                            android:layout_gravity="center"
                            android:layout_height="60dp"
                            style="@style/tv_headline_6"
                            android:text="@string/about_us_developer_punzalan" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:layout_marginTop="6dp"
                            android:textAllCaps="false"
                            android:text="@string/about_us_developer_punzalan_email"
                            style="@style/tv_overline" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:textColor="@color/cb_primary_purple"
                            android:layout_marginTop="6dp"
                            android:text="@string/about_us_role_project_manager_and_database_administrator"
                            style="@style/tv_body_2" />
                    </LinearLayout>
                    <LinearLayout
                        android:elevation="6dp"
                        android:padding="12dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_corners_background_surface"
                        android:layout_width="200dp"
                        android:layout_height="260dp"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_gravity="center"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/zaulda"/>

                        <TextView
                            android:textAlignment="center"
                            android:alpha="0.87"
                            android:layout_height="60dp"
                            android:layout_marginTop="12dp"
                            android:layout_gravity="center"
                            style="@style/tv_headline_6"
                            android:text="@string/about_us_developer_zaulda" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:layout_marginTop="6dp"
                            android:textAllCaps="false"
                            android:text="@string/about_us_developer_zaulda_email"
                            style="@style/tv_overline" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:textColor="@color/cb_primary_purple"
                            android:layout_marginTop="6dp"
                            android:text="@string/about_us_role_project_manager_and_database_administrator"
                            style="@style/tv_body_2" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="42dp"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:textAlignment="center"
                android:alpha="0.6"
                android:textAllCaps="false"
                style="@style/tv_overline"
                android:text="@string/expresso_copyright" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>