<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cb_background_black"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/home_app_name"
                    android:src="@drawable/app_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:alpha="0.87"
                    android:id="@+id/tv_main_app_title"
                    style="@style/tv_headline_5"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/home_app_title"
                    android:textAlignment="center"
                    android:textColor="@color/cb_on_background_purple"
                    android:textStyle="bold" />

                <TextView
                    android:alpha="0.6"
                    style="@style/tv_subtitle_1"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/home_app_description"
                    android:textAlignment="center"
                    android:textColor="@color/cb_on_background_white" />

                <Button
                    style="@style/btn_contained"
                    android:layout_height="60dp"
                    app:iconSize="28dp"
                    app:iconPadding="0dp"
                    app:iconGravity="start"
                    app:iconTint="@color/cb_on_surface_white"
                    app:icon="@drawable/ic_google"
                    android:id="@+id/btn_main_continue_with_google"
                    android:layout_gravity="center"
                    android:layout_marginTop="42dp"
                    android:text="@string/button_continue_with_google"
                    android:textColor="@color/cb_on_surface_white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:alpha="0.6"
                android:textColor="@color/cb_background_white"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="false"
                style="@style/tv_overline"
                android:text="@string/expresso_copyright" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>