<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_ab_pretest_popup_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/cb_primary_black"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ai_robot_zoom_in_logo" />

                <TextView
                    android:id="@+id/tv_ab_pretest_popup_title"
                    android:layout_gravity="center"
                    style="@style/tv_headline_6"
                    android:alpha="0.87"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/temp_string_title" />

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_ab_pretest_popup_message"
                    style="@style/tv_body_1"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp"
                    android:alpha="0.6"
                    android:text="@string/temp_string_paragraph" />

                <RelativeLayout
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_ab_pretest_popup_logout"
                        style="@style/btn_borderless"
                        android:layout_width="wrap_content"
                        android:backgroundTint="@color/cb_primary_black"
                        android:text="@string/button_logout"
                        android:alpha="0.87"
                        android:textColor="@color/cb_on_surface_white"
                        android:textAppearance="@style/tv_button" />

                    <Button
                        android:alpha="0.87"
                        android:id="@+id/btn_ab_pretest_popup_continue"
                        style="@style/btn_borderless"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_toRightOf="@id/btn_ab_pretest_popup_logout"
                        android:text="@string/button_continue"
                        android:textColor="@color/cb_primary_purple" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>